--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.292.0",
     "next": "^14.0.0",
     "nodemailer": "^7.0.5",
+    "openai": "^6.1.0",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
